--- a/ECE241Project.qsf
+++ b/ECE241Project.qsf
@@ -319,4 +319,5 @@ set_location_assignment PIN_E12 -to VGA_R[6]
 set_location_assignment PIN_F13 -to VGA_R[7]
 set_location_assignment PIN_C10 -to VGA_SYNC_N
 set_location_assignment PIN_D11 -to VGA_VS
+set_global_assignment -name QIP_FILE ram400x9_car.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
